Polybar tracks more :sparkles:

--- a/.config/polybar/docky/config.ini
+++ b/.config/polybar/docky/config.ini
@@ -75,7 +75,7 @@ font-1 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher workspaces
+modules-left = launcher workspaces cpu memory filesystem
 modules-center = spotify
 modules-right = updates color-switch pulseaudio wired-network date sysmenu
 
