--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "/home/ness/.config/nvim"]
-	path = /home/ness/.config/nvim
-	url = https://github.com/ssenr/nvim
+[submodule ".config/nvim"]
+    path = .config/nvim
+	url = git@github.com:ssenr/nvim.git
