LaTeX Workflow Created :information_desk_person:

--- a/.config/polybar/docky/colors.ini
+++ b/.config/polybar/docky/colors.ini
@@ -12,12 +12,12 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #0b0822
-foreground = #b0c1c9
-foreground-alt = #7b878c
+background = #151615
+foreground = #dddad2
+foreground-alt = #9a9893
 module-fg = #F5F5F5
-primary = #75274E
-secondary = #694B63
-alternate = #A73452
+primary = #9E8D6F
+secondary = #C5946D
+alternate = #A79F94
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
